Project transactions_api {
  database_type: 'PostgreSQL'
  Note: '''
   # Transaction api
  '''

}


Table accounts {
  "id" bigserial [pk, increment]
  "owner" varchar [not null]
  "balance" bigint [not null]
  "currency" varchar [not null]
  "created_at" timestamptz [not null, default: `now()`]

  Indexes {
    owner
    (owner, currency) [unique, name: "owner_currency_key"]
  }
}

Table entries {
  "id" bigserial [pk, increment]
  "account_id" bigint [not null]
  "amount" bigint [not null, note: 'can be negative or positive']
  "created_at" timestamptz [not null, default: `now()`]

  Indexes {
    account_id
  }
}

Table transfers {
  "id" bigserial [pk, increment]
  "from_account_id" bigint [not null]
  "to_account_id" bigint [not null]
  "amount" bigint [not null, note: 'must be positive']
  "created_at" timestamptz [not null, default: `now()`]

  Indexes {
    from_account_id
    to_account_id
    (from_account_id, to_account_id)
  }
}

Table users{
  "username" varchar [pk]
  "role" varchar [not null, default: 'depositor']
  "hashed_password" varchar [not null]
  "full_name" varchar [not null]
  "email" varchar [unique, not null]
  "is_email_verified" bool [not null, default: false]
  "password_changed_at" timestamptz [not null, default: `'0001-01-01 00:00:00Z'`]
  "created_at" timestamptz [not null, default: `now()`]
}

Table verify_emails {
  "id" bigserial [pk]
  "username" varchar [not null]
  "email" varchar [not null]
  "secret_code" varchar [not null]
  "is_used" bool [not null, default: false]
  "created_at" timestamptz [not null, default: `now()`]
  "expired_at" timestamptz [not null, default: `now() + interval '15 minutes'`]
}

Table sessions {
  "id" uuid [pk]
  "username" varchar [not null]
  "refresh_token" varchar [not null]
  "user_agent" varchar [not null]
  "client_ip" varchar [not null]
  "is_blocked" boolean [not null, default: false]
  "expires_at" timestamptz [not null]
  "created_at" timestamptz [not null, default: `now()`]
}

Ref: accounts."id" < entries."account_id"

Ref: accounts."id" < transfers."from_account_id"

Ref: accounts."id" < transfers."to_account_id"

Ref: users."username" <  accounts."owner"

Ref: users."username" < sessions."username"

Ref: users."username" < verify_emails."username"